# yambar

./: .clang-format  .woodpecker.yaml  .woodpecker.yml  CHANGELOG.md  PKGBUILD  PKGBUILD.wayland-only  README.md  char32.c  char32.h  config-verify.c  config-verify.h  config.c  config.h  decoration.h  log.c  log.h  main.c  meson.build  meson_options.txt  module.c  module.h  particle.c  particle.h  plugin.c  plugin.h  tag.c  tag.h  xcb.c  yml.c  yml.h
.builds/: alpine-x64.yml
bar/: backend.h  bar.c  bar.h  private.h  wayland.c  xcb.c
decorations/: background.c  border.c  overline.c  stack.c  underline.c
doc/: meson.build  yambar-decorations.5.scd  yambar-modules-battery.5.scd  yambar-modules-disk-io.5.scd  yambar-modules-dwl.5.scd  yambar-modules-i3.5.scd  yambar-modules-mpd.5.scd  yambar-modules-mpris.5.scd  yambar-modules-network.5.scd  yambar-modules-niri-language.5.scd  yambar-modules-niri-workspaces.5.scd  yambar-modules-pipewire.5.scd  yambar-modules-script.5.scd  yambar-modules.5.scd  yambar-particles.5.scd  yambar-tags.5.scd  yambar.1.scd  yambar.5.scd
examples/: river-minimal.yml
modules/: alsa.c  backlight.c  battery.c  clock.c  cpu.c  dbus.h  disk-io.c  dwl.c  foreign-toplevel.c  i3-common.c  i3-common.h  i3.c  label.c  mem.c  meson.build  mpd.c  mpris.c  network.c  niri-common.c  niri-common.h  niri-language.c  niri-workspaces.c  pipewire.c  pulse.c  removables.c  river.c  script.c  sway-xkb.c  xkb.c  xwindow.c
particles/: dynlist.c  dynlist.h  empty.c  list.c  map.c  map.h  map.l  map.y  progress-bar.c  (+2 more)
test/: full-conf-good.yml  meson.build
(+7 files in other folders)
